# esb

./: .dockerignore  .dockleignore  .env.example  .env.test  .gitattributes  .gitignore  .golangci.yml  .mise.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  bake.hcl  bench_network.py  debug_401_error.txt  debug_entrypoint.sh  debug_import.py  debug_logs.py  debug_out.txt  docker-bake.hcl  docker-compose.containerd.ops.yml  docker-compose.containerd.yml  docker-compose.dev.yml  docker-compose.dind.yml  docker-compose.docker.ops.yml  docker-compose.docker.yml  docker-compose.fc-node.yml  docker-compose.fc.yml  docker-compose.infra.yml  docker-compose.registry.yml  docker-compose.worker.yml  docker-compose.yml  entrypoint.sh  go.work  go.work.cli  go.work.cli.sum  go.work.sum  lefthook.yml  pyproject.toml  (+7 more)
.agent/: 2026-02-24-config-dir-removal.md  2026-02-25-branding-minimalization-execplan.md  execplan-artifact-contract-realignment-master.md  execplan-artifact-first-deploy.md  execplan-artifact-manifest-slimming.md  execplan-artifact-registry-normalization.md  execplan-artifactcore-api-surface-reduction.md  execplan-artifactcore-refactor-call-contract.md  execplan-artifactctl-deploy-kong.md  execplan-artifactctl-refactor-test-first.md  execplan-boundary-separation-master.md  execplan-cli-boundary-remediation-round5.md  execplan-cli-extraction-execution.md  execplan-cli-separation-master-20260220.md  execplan-contract-boundary-deep-audit-master.md  execplan-maven-proxy-hardening.md  execplan-maven-shim-system-ownership.md  execplan-pkg-retire-esb-ctl.md  execplan-prepare-images-responsibility-split.md  execplan-prewarm-image-import-cleanup.md  execplan-proto-buf-migration.md  milestone1-boundary-baseline.md  milestone1-boundary-deep-audit.md  milestone1-cli-extraction-seed.md  milestone1-contract-target-definition.md  milestone1-guard-hardening.md  milestone2-boundary-remediation.md  milestone2-cli-standalone-hardening.md  milestone2-pkg-versionability.md  milestone2-runtime-compat-validator.md  milestone3-adapter-version-normalization.md  milestone3-artifactctl-preflight-rewire.md  milestone3-esb-cli-removal-and-contract-update.md  milestone3-final-verification.md  milestone4-cli-absent-ci-rehearsal.md  milestone4-cli-producer-contract-alignment.md  milestone4-final-verification-no-cli.md  milestone5-e2e-contract-refresh.md  milestone5-extraction-readiness-signoff.md  milestone6-cleanup-and-final-verification.md
.github/: pull_request_template.md
artifacts/: deploy.sh
bootstrap/: README.md  vars.yml
compose/: base.yml  registry.yml  worker.yml
config/: Corefile  branding.yaml  defaults.env  functions.yml  gateway_log.yaml  haproxy.cfg  haproxy.gateway.cfg  manager_log.yaml
diagnostics/: log.txt  vmui_logs_export.jsonl
docs/: README.md  architecture-containerd.md  artifact-operations.md  autoscaling.md  bootstrap-guide.md  branding-generator.md  branding-phase2-pr-body.md  branding-tool-separation-handoff.md  cache-layout.md  certificate-operations.md  cli-separation-checklist.md  client-auth-spec.md  container-management.md  container-runtime-operations.md  deploy-artifact-contract.md  docker-architecture.md  docker-image-architecture.md  downstream-branding-flow.md  e2e-runtime-smoke.md  environment-variables.md  esb-usage-dependency-inventory.md  firecracker-roadmap.md  generator-architecture.md  java-maven-proxy-contract.md  local-logging-adapter.md  manager-restart-resilience.md  maven-proxy-contract-v2.md  proxy.md  (+10 more)
services/gateway/: .dockerignore  Dockerfile  Dockerfile.containerd  Dockerfile.docker  Dockerfile.firecracker  __init__.py  client.py  clients.py  config.py  entrypoint.sh  exceptions.py  lifecycle.py  main.py  middleware.py  pyproject.toml  routes.py
services/gateway/api/: __init__.py  deps.py  openapi.py
services/gateway/config/: gateway_log.yaml  haproxy.gateway.cfg
services/gateway/core/: __init__.py  circuit_breaker.py  concurrency.py  event_builder.py  exceptions.py  function_name.py  logging_config.py  proxy.py  security.py  utils.py  wg_routes.py
services/gateway/docs/: README.md  architecture.md  autoscaling.md  client-auth-spec.md  configuration.md  container-cache.md  network-optimization.md  orchestrator-restart-resilience.md  resilience.md  restart-resilience.md  security.md
services/gateway/models/: __init__.py  auth.py  aws_v1.py  context.py  function.py  result.py  schemas.py  target_function.py
services/gateway/pb/: agent_pb2.py  agent_pb2_grpc.py
services/gateway/scripts/: copy_seed_config.sh
services/gateway/seed-config/: functions.yml  resources.yml  routing.yml
services/gateway/services/: __init__.py  agent_invoke.py  config_reloader.py  container_cache.py  container_manager.py  container_pool.py  function_registry.py  grpc_backend.py  grpc_channel.py  grpc_provision.py  janitor.py  lambda_invoker.py  pool_manager.py  processor.py  route_matcher.py  scheduler.py
services/gateway/tests/: conftest.py  test_cb_logical_error.py  test_circuit_breaker_core.py  test_client.py  test_client_config.py  test_concurrency.py  test_config.py  test_config_defaults.py  test_container_manager.py  test_container_pool.py  test_container_pool_autoscaling.py  test_error_handling_main.py  test_error_logging.py  test_event_builder.py  test_event_builder_v2.py  test_function_name.py  test_function_registry.py  test_grpc_backend.py  test_grpc_backend_concurrency.py  test_grpc_provision.py  test_integration_handler.py  test_invoke_route.py  test_janitor.py  test_lambda_invoker_circuit.py  test_lambda_invoker_circuit.py.bak  test_lambda_invoker_di.py  test_lambda_invoker_pool.py  test_lambda_invoker_strategy.py  test_logging_config.py  test_middleware.py  test_middleware_v2.py  test_models.py  test_openapi_docs.py  test_package_exports.py  test_pool_lifecycle.py  test_pool_manager.py  test_pool_manager_autoscaling.py  test_proxy.py  test_request_context.py  test_route_matcher.py  (+4 more)
services/gateway/tests/stress/: test_pool_concurrency.py
services/gateway/tests/unit/: test_lambda_invoker_isolation.py  test_processor.py
(+1106 files in other folders)
