[project]
name = "edge-serverless-box"
version = "0.1.0"
description = "High-fidelity Lambda runtime for edge and local development, powered by AWS Lambda RIE."
requires-python = ">=3.12"
dependencies = [
    # API Gateway compatible server
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    # Docker operations
    "docker>=6.1.3",
    # Scheduler
    "apscheduler>=3.10.4",
    # JWT authentication
    "pyjwt>=2.8.0",
    # Database (ScyllaDB / Cassandra compatible)
    # cassandra-driver is unused in Gateway and removed to shorten builds
    # AWS SDK (S3/DynamoDB compatible)
    "boto3>=1.34.0",
    # Configuration management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.1",
    "pyyaml>=6.0",
    "watchdog>=6.0.0",
    "jinja2>=3.1",
    "cachetools>=5.3.0",
    "questionary>=2.0.0",
    "pyinfra>=3.0.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "respx>=0.20.2",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "lefthook",  # Git hooks manager
    "cryptography>=41.0.0",  # For SSL certificate generation
    "requests>=2.31.0",      # For tests
    "ty>=0.0.1a0",           # Type checker
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
"tools/pyinfra/esb_node_provision.py" = ["E501"]
"tools/cli/commands/node_payload.py" = ["E501"]
"tools/cli/core/context.py" = ["E501"]
"tools/cli/core/trust_store.py" = ["E501"]
"tools/cli/main.py" = ["E501"]
"tools/cli/commands/node.py" = ["E501"]
"tools/cli/commands/reset.py" = ["E501"]
"tools/cli/commands/build.py" = ["E501"]
"tools/cli/commands/init.py" = ["E501"]
"services/gateway/main.py" = ["E501"]
"services/gateway/services/pool_manager.py" = ["E501"]
"services/gateway/services/container_cache.py" = ["E501"]
"services/gateway/services/grpc_provision.py" = ["E501"]
"services/gateway/services/janitor.py" = ["E501"]
"**/pb/*" = ["E501"]
"e2e/**" = ["E501", "B017", "F841"]
"e2e/run_tests.py" = ["E501"]
"**/tests/*" = ["E501", "F841", "B017"]
"**/tests/**" = ["E501", "F841", "B017"]


[tool.ty.src]
exclude = [
    "e2e/",
    "**/pb/",
    "**/tests/",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
# Ignore protobuf generated files and test-specific imports
unresolved-import = "ignore"
unresolved-attribute = "ignore"

[project.scripts]
esb = "tools.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["e2e", "tools", "services/common/tests", "services/gateway/tests", "services/orchestrator/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]
markers = [
    "slow: marks tests as slow (may take several minutes)",
]
