[project]
name = "edge-serverless-box"
version = "0.1.0"
description = "High-fidelity Lambda runtime for edge and local development, powered by AWS Lambda RIE."
requires-python = ">=3.12"
dependencies = [
    # API Gateway compatible server
    "fastapi>=0.104.1",
    # Scheduler
    "apscheduler>=3.10.4",
    # JWT authentication
    "pyjwt>=2.8.0",
    # Database (ScyllaDB / Cassandra compatible)
    # cassandra-driver is unused in Gateway and removed to shorten builds
    # AWS SDK (S3/DynamoDB compatible)
    "boto3>=1.34.0",
    # Configuration management
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.1",
    "urllib3>=2.0.0",
    "pyyaml>=6.0",
    "cachetools>=5.3.0",
    "grpcio>=1.59.0",
    "protobuf>=4.25.0",
    "aws-croniter>=1.0.5",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "respx>=0.20.2",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "lefthook",  # Git hooks manager
    "cryptography>=41.0.0",  # For SSL certificate generation
    "requests>=2.31.0",      # For tests
    "ty>=0.0.1a0",           # Type checker
    "grpcio-tools>=1.59.0",  # For proto code generation only
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# Node payload helper moved to Go CLI migration (file removed).
# Ignore line length for autogenerated Protobuf files
"**/pb/*" = ["E501", "I001"]
# Ignore line length for test files (assertions, etc)
"e2e/**" = ["E501", "B017"]
"**/tests/*" = ["E501", "B017"]
"**/tests/**" = ["E501", "B017"]


[tool.ty.src]
exclude = [
    ".esb/",
    "e2e/",
    "**/pb/",
    "**/tests/",
]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["./e2e/fixtures/layers/common/python"]

[tool.ty.rules]
# No global ignores


[tool.pytest.ini_options]
testpaths = ["e2e", "services/common/tests", "services/gateway/tests", "runtime-hooks/python/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]
markers = [
    "slow: marks tests as slow (may take several minutes)",
]
